--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,12 @@ a:hover {
   background-position: top center;
 }
 
+/* #meet-id {
+  margin-top: 100px;
+} */
+.i-class {
+  margin-top: 70px;
+}
 @media (max-width: 1024px) {
   .bg-image {
     background-attachment: scroll;
@@ -919,9 +925,18 @@ a:hover {
 }
 
 .service-box .s-description {
-  color: black;
+  color: white;
+}
+.service-content .s-description li {
+  color: #fff !important;
 }
 
+@media(max-width: 670) {
+  .title-a {
+    font-size: 15px;
+    font-weight: 300;
+  }
+}
 /*--------------------------------------------------------------
 # Work
 --------------------------------------------------------------*/
@@ -933,6 +948,10 @@ a:hover {
 @media (min-width: 577px) {
   .counter-box {
     margin-bottom: 1.8rem;
+  }
+  .logo {
+    margin-left: 20px;
+    font-size: 20px;
   }
 }
 
